--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar -->
@@ -40,6 +42,10 @@
                 <a href="documentos.html" class="nav-item">
                     <i class="iconoir-page"></i>
                     <span>Documentos</span>
+                </a>
+                <a href="usuarios.html" class="nav-item">
+                    <i class="iconoir-settings"></i>
+                    <span>Usuários</span>
                 </a>
             </nav>
 
@@ -177,4 +183,5 @@
     <script src="assets/js/api.js"></script>
     <script src="assets/js/dashboard.js"></script>
 </body>
+
 </html>
